<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<resources>
    <string name="app_name">Advanced settings</string>

    <string name="category_s2w_title">Sweep2Wake</string>
    <string name="s2w_switch_title_head">Enable</string>
    <string name="s2w_switch_summary_head">Switch phone screen on/off with a swipe over the capacitive buttons</string>
    <string name="s2w_stroke_title_head">Direction</string>
    <string name="s2w_stroke_summary_head">Set to "Direction dependent" to allow only a left-to-right swipe for turning on and a right-to-left swipe for turning off</string>
    <string name="s2w_length_title_head">Minimum Length</string>
    <string name="s2w_length_summary_head">Set the number of buttons that are needed to be swiped over for switching screen on/off</string>

    <string name="category_usb_title">USB</string>
    <string name="fastcharge_title_head">Fast Charge</string>
    <string name="fastcharge_summary_head">Enable to draw more power when connected to a PC USB port</string>

    <string name="category_backlightdisable_title">Backlight</string>
    <string name="backlightdisable_title_head">Disable Button Backlight</string>
    <string name="backlightdisable_summary_head">Select to disable the capacitive button backlight</string>
    <string name="backlightnotification_title_head">Button Backlight Notification</string>
    <string name="backlightnotification_summary_head">Select to enable the capacitive button backlight for Notification events</string>

    <string name="category_smartdimmer_title">nVidia SmartDimmer</string>
    <string name="smartdimmer_switch_title_head">Enable</string>
    <string name="smartdimmer_switch_summary_head">Switch nVidia SmartDimmer on/off (switching on saves battery life with less backlight and more contrast/colors, switching off should give brighter LCD backlight)</string>

</resources>
