<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<!-- defaultValues need to be in sync with the default kernel values! -->

	<PreferenceCategory
    	android:title="@string/category_s2w_title">
	    <!-- s2w switch Options -->
	    <CheckBoxPreference
	        android:key="s2w_switch"
	        android:title="@string/s2w_switch_title_head"
	        android:summary="@string/s2w_switch_summary_head"
	        android:defaultValue="1" />
	    <!-- s2w stroke Options -->
	    <ListPreference
	        android:key="s2w_stroke"
	        android:title="@string/s2w_stroke_title_head"
	        android:summary="@string/s2w_stroke_summary_head"
                android:dependency="s2w_switch"
	        android:entries="@array/s2w_stroke_entries"
	        android:entryValues="@array/s2w_stroke_entries_values"
	        android:defaultValue="1" />
`		<!-- s2w min length -->
	    <ListPreference
	        android:key="s2w_length"
	        android:title="@string/s2w_length_title_head"
	        android:summary="@string/s2w_length_summary_head"
                android:dependency="s2w_switch"
	        android:entries="@array/s2w_length_entries"
	        android:entryValues="@array/s2w_length_entries_values"
	        android:defaultValue="325" />
	</PreferenceCategory>

	<PreferenceCategory
    	android:title="@string/category_usb_title">
	    <!-- Fastcharge Options -->
	    <CheckBoxPreference
	        android:key="fastcharge"
	        android:title="@string/fastcharge_title_head"
	        android:summary="@string/fastcharge_summary_head"
	        android:defaultValue="0" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_backlightdisable_title">
	    <!-- Backlight Disable Options -->
	    <CheckBoxPreference
	        android:key="backlight_disable"
	        android:title="@string/backlightdisable_title_head"
	        android:summary="@string/backlightdisable_summary_head"
	        android:defaultValue="0" />
	    <!-- Backlight Notification Option -->
	    <CheckBoxPreference
	        android:key="backlight_notification"
	        android:title="@string/backlightnotification_title_head"
	        android:summary="@string/backlightnotification_summary_head"
	        android:defaultValue="0" />
	</PreferenceCategory>

	<PreferenceCategory
	android:title="@string/category_smartdimmer_title">
	    <!-- SmartDimmer Switch Options -->
	    <CheckBoxPreference
	        android:key="smartdimmer_switch"
	        android:title="@string/smartdimmer_switch_title_head"
	        android:summary="@string/smartdimmer_switch_summary_head"
	        android:defaultValue="1" />
	</PreferenceCategory>
</PreferenceScreen>
